# daily-bugle

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  preprocess.py  pyproject.toml  run.py  template.html
.agents/skills/digest/: SKILL.md
.claude/commands/: digest.md
.claude/skills/digest/: SKILL.md
.github/workflows/: ci.yml  notify.yml  pages.yml
fetchers/: github_trending.py  hackernews.py  reddit.py  rss.py
output/: 2026-04-30.html  2026-05-01.html  2026-05-02.html  2026-05-07.html  2026-05-08.html  2026-05-09.html  2026-05-21.html  2026-05-22.html  2026-05-23.html  2026-05-24.html  2026-05-25.html  2026-05-26.html  2026-05-27.html  2026-05-28.html  2026-05-29.html  2026-05-30.html  2026-06-02.html  2026-06-03.html  2026-06-05.html  2026-06-07.html  2026-07-07.html  2026-07-09.html  2026-07-11.html  2026-07-14.html  2026-07-15.html  index.html
scripts/: daily.sh
